check for `window` to avoid compile errors

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/mdx": "^0.15.5",
     "@mdx-js/runtime": "^0.15.5",
     "@mdx-js/tag": "^0.15.0",
+    "browser-monads": "^1.0.0",
     "emotion": "^9.2.10",
     "emotion-server": "^9.2.10",
     "emotion-theming": "^9.2.9",
