--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
   "name": "portfolio",
   "description": "Portfolio of Jon Long",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Jon Long",
   "dependencies": {
-    "@mdx-js/mdx": "^0.15.5",
-    "@mdx-js/runtime": "^0.15.5",
-    "@mdx-js/tag": "^0.15.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "browser-monads": "^1.0.0",
-    "emotion": "^9.2.10",
-    "emotion-server": "^9.2.10",
-    "emotion-theming": "^9.2.9",
-    "facepaint": "^1.2.1",
-    "gatsby": "next",
-    "gatsby-mdx": "^0.2.0",
-    "gatsby-plugin-emotion": "^2.0.5",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-remark-component": "^1.1.3",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gh-pages": "^2.0.1",
-    "imagesloaded": "^4.1.4",
-    "lodash": "^4.17.11",
-    "polished": "^2.2.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-emotion": "^9.2.10",
-    "react-helmet": "^5.2.0",
-    "rebass": "^3.0.0-9",
-    "shevyjs": "^1.1.0",
-    "styled-components": "4.0.0-beta.8"
+    "emotion": "^11.0.0",
+    "gatsby": "^4.15.2",
+    "gatsby-mdx": "^1.0.0",
+    "gatsby-plugin-emotion": "^7.15.0",
+    "gatsby-plugin-image": "^2.15.1",
+    "gatsby-plugin-manifest": "^4.15.1",
+    "gatsby-plugin-mdx": "^3.15.2",
+    "gatsby-plugin-offline": "^5.15.1",
+    "gatsby-plugin-react-helmet": "^5.15.0",
+    "gatsby-plugin-sharp": "^4.15.1",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-sharp": "^4.15.1",
+    "imagesloaded": "^5.0.0",
+    "polished": "^4.2.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-emotion": "^10.0.0",
+    "react-helmet": "^6.1.0",
+    "rebass": "^4.0.7",
+    "shevyjs": "^2.1.0"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "deploy": "gatsby build && gh-pages -d public -b master",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
