--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sharp": "^4.15.1",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.1",
+    "gh-pages": "^4.0.0",
     "imagesloaded": "^5.0.0",
     "polished": "^4.2.2",
     "react": "^18.1.0",
